cf_analysis_results/checkerframework_3.42.0_results/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8.txt
../dataset/june2020_dataset/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:474: error: (required.method.not.called) $$ 4 $$ method close $$ j.write(new StringWriter()) $$ java.io.Writer $$ possible exceptional exit due to XML.toJSONObject(s) with exception type org.json.JSONException $$ ( 23510, 23537 ) $$ @MustCall method close may not have been invoked on j.write(new StringWriter()) or any of its aliases.
            System.out.println(j.write(new StringWriter()));
                                      ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: possible exceptional exit due to XML.toJSONObject(s) with exception type org.json.JSONException
../dataset/june2020_dataset/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/org/json/JSONArray.java:905: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONObject)v).write(writer) $$ java.io.Writer $$ regular method exit $$ ( 29078, 29107 ) $$ @MustCall method close may not have been invoked on ((JSONObject)v).write(writer) or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/org/json/JSONArray.java:907: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONArray)v).write(writer) $$ java.io.Writer $$ regular method exit $$ ( 29182, 29210 ) $$ @MustCall method close may not have been invoked on ((JSONArray)v).write(writer) or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1573: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONObject)v).write(writer) $$ java.io.Writer $$ regular method exit $$ ( 52562, 52591 ) $$ @MustCall method close may not have been invoked on ((JSONObject)v).write(writer) or any of its aliases.
                    ((JSONObject)v).write(writer);
                                         ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/org/json/JSONObject.java:1575: error: (required.method.not.called) $$ 4 $$ method close $$ ((JSONArray)v).write(writer) $$ java.io.Writer $$ regular method exit $$ ( 52666, 52694 ) $$ @MustCall method close may not have been invoked on ((JSONArray)v).write(writer) or any of its aliases.
                    ((JSONArray)v).write(writer);
                                        ^
  The type of object is: java.io.Writer.
  Reason for going out of scope: regular method exit
../dataset/june2020_dataset/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/view/ResultsController.java:345: error: (required.method.not.called) $$ 4 $$ method close $$ wr $$ java.io.FileWriter $$ possible exceptional exit due to wr.write(text) with exception type java.io.IOException $$ ( 7995, 8045 ) $$ @MustCall method close may not have been invoked on wr or any of its aliases.
			java.io.FileWriter wr = new java.io.FileWriter(f);
			                   ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to wr.write(text) with exception type java.io.IOException
../dataset/june2020_dataset/url64700e9ab7_dwicke_course_scheduler_tgz-pJ8-org_json_TestJ8/src/coursescheduleapp/model/CourseDatabase.java:27: error: (required.method.not.called) $$ 4 $$ method close $$ DriverManager.getConnection("jdbc:sqlite:classes.sqlite") $$ java.sql.Connection $$ possible exceptional exit due to conn.createStatement() with exception type java.sql.SQLException $$ ( 672, 729 ) $$ @MustCall method close may not have been invoked on DriverManager.getConnection("jdbc:sqlite:classes.sqlite") or any of its aliases.
        conn = DriverManager.getConnection("jdbc:sqlite:classes.sqlite");
                                          ^
  The type of object is: java.sql.Connection.
  Reason for going out of scope: possible exceptional exit due to conn.createStatement() with exception type java.sql.SQLException
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors
